Added Supplier flow in Marketplace

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,6 +107,12 @@
 
                 <button type="submit">Search</button>
             </form>
+
+            <div class="mt-3">
+                <a href="/supplier/marketplace">Go to MexBay Marketplace</a>
+            </div>
+        
+        
         </div>
     </div>
 
