--- a/views/doctor-index.ejs
+++ b/views/doctor-index.ejs
@@ -97,6 +97,7 @@
                 <a href="/auth/signup">Signup</a>
             <% } %>
             <a href="/doctor/profile">View Profile</a>
+            <a href="/doctor/products">Products</a>
         </div>
         <form action="/auth/logout" method="POST" style="display: inline;">
             <button type="submit">Logout</button>
