--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -204,6 +204,7 @@
         <a href="/doctor/manage-time-slots">Manage Time Slots</a>
         <a href="/doctor/profile/blogs">View My Blogs</a>
         <a href="/doctor/dashboard">Chat Box</a>
+        <a href="/doctor/order-dashboard">Order Chat</a>
     <% } else { %>
         <button onclick="handleRestrictedAccess()">Manage Bookings</button>
         <button onclick="handleRestrictedAccess()">Manage Time Slots</button>
