--- a/views/adminBlogs.ejs
+++ b/views/adminBlogs.ejs
@@ -209,7 +209,7 @@ select:focus {
                             <div class="blog-item">
                                 <h3><%= blog.title %></h3>
                                 <p><strong>Author:</strong> <%= blog.author %></p>
-                                <p><strong>Description:</strong> <%= blog.description %></p>
+                                <p><strong>Description:</strong> <%- blog.description %></p>
                                 <p><strong>Author Email:</strong> <%= blog.authorEmail %></p>
                                 <p><strong>Verification Status:</strong> <%= blog.verificationStatus %></p>
 
