--- a/views/edit-blog.ejs
+++ b/views/edit-blog.ejs
@@ -57,27 +57,6 @@
             </option>
             <% }) %>
         </select><br><br>
-        <h2>Comments</h2>
-        <div class="comments-section">
-            <% blog.comments.forEach(comment => { %>
-                <div class="comment" id="comment-<%= comment._id %>">
-                    <p><strong>User:</strong> <%= comment.username || "Unknown User" %></p>
-                    <p><%= comment.comment %></p>
-                    <button class="delete-comment" data-comment-id="<%= comment._id %>">Delete Comment</button>
-                    <div class="replies">
-                        <% comment.replies.forEach(reply => { %>
-                            <div class="reply">
-                                <p><strong>User:</strong> <%= reply.username || "Unknown User" %></p>
-                                <p><%= reply.reply %></p>
-                                <button class="delete-reply" data-reply-id="<%= reply._id %>">Delete Reply</button>
-                            </div>
-                        <% }) %>
-                    </div>
-                </div>
-            <% }) %>
-        </div>
-        
-
 
         <button type="submit">Update Blog</button>
     </form>
@@ -93,8 +72,11 @@
             });
             $('#hashtags').select2({
                 placeholder: "Select hashtags",
-                allowClear: true,
-                tags: true 
+                allowClear: true
+            });
+            $('#conditions').select2({
+                placeholder: "Search for conditions",
+                allowClear: true
             });
 
             const quill = new Quill('#editor', {
@@ -110,60 +92,15 @@
                     ]
                 }
             });
-        
-            // Set the initial content of the Quill editor using HTML content from the blog description
-            quill.clipboard.dangerouslyPasteHTML(`<%= blog.description %>`);
-        
-            // On form submission, capture the HTML content from Quill and set it in the hidden input
-            $('#editBlogForm').on('submit', function (e) {
+
+            // Set initial content in the Quill editor
+            quill.root.innerHTML = `<%- blog.description %>`;
+
+            $('#editBlogForm').on('submit', function () {
                 var description = document.querySelector('input[name=description]');
-                description.value = quill.root.innerHTML; // Save the HTML content in the hidden input
-            });
-            $('.delete-comment').on('click', function (e) {
-                const commentId = $(this).data('comment-id');
-                const blogId = "<%= blog._id %>"; // Get the blog ID dynamically
-    
-                if (confirm('Are you sure you want to delete this comment?')) {
-                    $.ajax({
-                        url: `/doctor/blogs/${blogId}/comments/${commentId}`,
-                        type: 'DELETE',
-                        success: function (response) {
-                            // Remove the comment from the DOM
-                            $(`#comment-${commentId}`).remove();
-                            alert(response);
-                        },
-                        error: function (xhr) {
-                            alert('Error deleting comment: ' + xhr.responseText);
-                        }
-                    });
-                }
-            });
-    
-            // Delete reply functionality
-            $('.delete-reply').on('click', function (e) {
-                const replyId = $(this).data('reply-id');
-                const commentId = $(this).closest('.comment').attr('id').split('-')[1]; // Extract comment ID
-                const blogId = "<%= blog._id %>"; // Get the blog ID dynamically
-    
-                if (confirm('Are you sure you want to delete this reply?')) {
-                    $.ajax({
-                        url: `/doctor/blogs/${blogId}/comments/${commentId}/replies/${replyId}`,
-                        type: 'DELETE',
-                        success: function (response) {
-                            // Remove the reply from the DOM
-                            $(`.reply[data-reply-id="${replyId}"]`).remove();
-                            alert(response);
-                        },
-                        error: function (xhr) {
-                            alert('Error deleting reply: ' + xhr.responseText);
-                        }
-                    });
-                }
+                description.value = quill.root.innerHTML; 
             });
         });
     </script>
-   
-    
-    
 </body>
 </html>
