Updated Supplier Profile

--- a/views/doctor-index.ejs
+++ b/views/doctor-index.ejs
@@ -98,6 +98,8 @@
             <% } %>
             <a href="/doctor/profile">View Profile</a>
             <a href="/doctor/products">Products</a>
+            <br>
+            <a href="/supplier/all-suppliers">View All Suppliers</a>
         </div>
         <form action="/auth/logout" method="POST" style="display: inline;">
             <button type="submit">Logout</button>
