--- a/views/supplierLogin.ejs
+++ b/views/supplierLogin.ejs
@@ -38,7 +38,7 @@
         <hr>
         
         <!-- Sign in with Medxbay Account Button, with role=supplier parameter -->
-        <button onclick="window.location.href='/auth/login?role=supplier'" class="btn btn-outline-primary mt-3">Sign in with Medxbay Account</button>
+        <!-- <button onclick="window.location.href='/auth/login?role=supplier'" class="btn btn-outline-primary mt-3">Sign in with Medxbay Account</button> -->
     </div>
 </body>
 </html>
