--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,6 +82,9 @@
         <div class="mt-3">
             <a href="/auth/signup/doctor">Doctor Sign Up</a>
         </div>
+        <p class="mt-3"><a href="/supplier/register">Supplier Sign Up</a>.</p>
+        <p class="mt-3"><a href="/supplier/login">Supplier Login</a>.</p>
+
 
         <script>
             grecaptcha.ready(function() {
