--- a/views/supplierIndex.ejs
+++ b/views/supplierIndex.ejs
@@ -11,10 +11,10 @@
         <h2>Welcome to Your Dashboard</h2>
 
         <div class="mt-3">
-            <a href="/supplier/manage-products" class="btn btn-primary">Manage Products</a>
-            <a href="/supplier/manage-orders" class="btn btn-secondary">Manage Orders</a>
-            <a href="/supplier/manage-profile" class="btn btn-info">Manage Profile</a>
-            <a href="/supplier/logout" class="btn btn-danger">Logout</a> 
+            <a href="/supplier/manage-products" class="btn btn-primary">Manage Products</a><br>
+            <a href="/supplier/manage-orders" class="btn btn-secondary">Manage Orders</a><br>
+            <a href="/supplier/profile" class="btn btn-info">Profile</a><br>
+            <a href="/supplier/logout" class="btn btn-danger">Logout</a> <br>
         </div>
     </div>
 </body>
