--- a/views/supplierRegister.ejs
+++ b/views/supplierRegister.ejs
@@ -61,10 +61,13 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
 
+        <p class="mt-3">Have an account? <a href="/supplier/login">Login here</a>.</p>
+
+
         <hr>
 
         <!-- Sign up with Medxbay Account Button, with role=supplier parameter -->
-        <button onclick="window.location.href='/auth/register?role=supplier'" class="btn btn-outline-primary mt-3">Sign up with Medxbay Account</button>
+        <!-- <button onclick="window.location.href='/auth/register?role=supplier'" class="btn btn-outline-primary mt-3">Sign up with Medxbay Account</button> -->
     </div>
 </body>
 </html>
