--- a/views/doctor-index.ejs
+++ b/views/doctor-index.ejs
@@ -100,6 +100,9 @@
             <a href="/doctor/products">Products</a>
             <br>
             <a href="/supplier/all-suppliers">View All Suppliers</a>
+
+            <a href="/doctor/view-corporate-request/<%= doctor._id %>">View Corporate Request</a>
+
         </div>
         <form action="/auth/logout" method="POST" style="display: inline;">
             <button type="submit">Logout</button>
