Added corporate profile

--- a/views/corporateHome.ejs
+++ b/views/corporateHome.ejs
@@ -34,6 +34,7 @@
     <p>No doctors added to your corporate yet.</p>
   <% } %>
   <a href="/corporate/add-doctors"> Add Doctors</a>
+  <a href="/corporate/profile">View Profile</a>
   <a href="/corporate/followers">View Followers</a>
 
 </body>
