--- a/views/corporateHome.ejs
+++ b/views/corporateHome.ejs
@@ -36,6 +36,8 @@
   <a href="/corporate/add-doctors"> Add Doctors</a>
   <a href="/corporate/profile">View Profile</a>
   <a href="/corporate/followers">View Followers</a>
+  <a href="/corporate/logout">Logout</a>
+
 
 </body>
 </html>
